# OpenGL-text-print

./: .gitignore  CMakeLists.txt  FreeType use.md  LICENSE  README.md
app/: main.cpp
sources/: mainwindow.cpp  mainwindow.h  rendertext.cpp  rendertext.h
